After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781071 - Creating an event in calendar causes crash
Creating an event in calendar causes crash
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Backend
3.22.x
Other Linux
: Normal critical
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-08 22:50 UTC by krinkodot22
Modified: 2017-05-14 17:06 UTC
See Also:
GNOME target: ---
GNOME version: 3.21/3.22


Attachments
Backtrace shown by ABRT. (50.89 KB, text/plain)
2017-04-08 22:50 UTC, krinkodot22
  Details
manager: fail when client unit isn't found (935 bytes, patch)
2017-04-13 10:10 UTC, Georges Basile Stavracas Neto
committed Details | Review
window: properly unref edit dialog's event (1.56 KB, patch)
2017-04-28 21:25 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description krinkodot22 2017-04-08 22:50:03 UTC
Created attachment 349534 [details]
Backtrace shown by ABRT.

Whenever I try to create an event on a Microsoft Exchange calendar (registered via Gnome Online Accounts), Calendar closes forcefully. ABRT lists the reason of the crash as "gnome-calendar killed by SIGSEGV".

However, adding an event to my Personal (local) calendar doesn't trigger this crash, and neither does creating an event on my Personal calendar and changing it to be on my MS Exchange calendar.

In the meantime, I have been able to create events on my MS Exchange calendar via Evolution.

I wasn't able to submit this bug through ABRT since there is no usable stack trace (though it would have been sent to Red Hat Bugzilla, since I'm using F25). Instead, I have attached the backtrace shown by ABRT.

Perhaps related to Case 760286.
Comment 1 Georges Basile Stavracas Neto 2017-04-13 10:10:32 UTC
Created attachment 349777 [details] [review]
manager: fail when client unit isn't found

This is a temporary solution to avoid a crash that
some people are experiencing. More investigation is
required.
Comment 2 Georges Basile Stavracas Neto 2017-04-13 10:12:19 UTC
Comment on attachment 349777 [details] [review]
manager: fail when client unit isn't found

The attached patch is a workaround to make Calendar not crash. I want to know why there is a NULL unit being inserted, but I can't reproduce this issue.

Until there, I'm leaving this bug opened.
Comment 3 Georges Basile Stavracas Neto 2017-04-13 10:13:08 UTC
Comment on attachment 349777 [details] [review]
manager: fail when client unit isn't found

Attachment 349777 [details] pushed as 1362762 - manager: fail when client unit isn't found
Comment 4 Nicolas Repentin 2017-04-18 10:07:10 UTC
Hi,

I've got the same bug using an owncloud calendar (caldav).
When creating a new element, I got a segfault.


** (gnome-calendar:31570): CRITICAL **: gcal_event_get_source: assertion 'GCAL_IS_EVENT (self)' failed

** (gnome-calendar:31570): CRITICAL **: gcal_event_get_component: assertion 'GCAL_IS_EVENT (self)' failed

(gnome-calendar:31570): e-data-server-CRITICAL **: e_source_hash: assertion 'E_IS_SOURCE (source)' failed

(gnome-calendar:31570): libecal-CRITICAL **: e_cal_component_get_icalcomponent: assertion 'comp != NULL' failed

(gnome-calendar:31570): GLib-GObject-CRITICAL **: g_object_ref: assertion 'G_IS_OBJECT (object)' failed
[3]    31570 segmentation fault  gnome-calendar

OS is : Debian 9 x86_64
Gnome 3.22.2
Comment 5 John Philpott 2017-04-21 10:49:24 UTC
same problem with Google Calendar but it works sometimes and I can't figure out why.
Comment 6 Georges Basile Stavracas Neto 2017-04-28 21:25:05 UTC
Created attachment 350686 [details] [review]
window: properly unref edit dialog's event

We were appearently unreferencing the same event
twice when responding to Edit dialog's signal.

Fix that by only cleaning the event after using
it.
Comment 7 Georges Basile Stavracas Neto 2017-04-28 21:31:14 UTC
Comment on attachment 350686 [details] [review]
window: properly unref edit dialog's event

Per Michael's testing, this patch seems to work.
Comment 8 Georges Basile Stavracas Neto 2017-04-28 21:34:04 UTC
Pushed to GNOME 3.22 branch (this is actually fixed in master and 3.24).

I'll release Calendar 3.22.5 immediately. Please request package maintainers to update it.

Closing the bug as RESOLVED FIXED. Thanks for the patience, and sorry for releasing Calendar in this broken state for so long.

Attachment 350686 [details] pushed as ba768c7 - window: properly unref edit dialog's event
Comment 9 Mart Raudsepp 2017-04-29 18:17:13 UTC
I would like to express thanks for pushing a 3.22 release out for this. We in Gentoo are very glad to get to know about such important fixes in the form of an old cycle release (and our scripts picking it up then) when our stable version is still on that, and are happy to just package and push to stable faster the upstream release instead of grabbing patches (or worse, not even really knowing about them when users suffering from it haven't reported on our bugzilla).
Hopefully next time around we'll be on 3.24 though :)  But then we'll benefit from late 3.24 releases if needed until 3.26 is stable, etc :)
Comment 10 krinkodot22 2017-05-14 17:06:12 UTC
Thanks from me as well! I got the update a little while ago and it's working like a charm. Your responsiveness in fixing this is much appreciated.